kubernetes/frontend_cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
 name: frontend-clusterip-service
 namespace: assignment-portal
spec:
 type: ClusterIP
 ports:
   - port: 80
     targetPort: 80
 selector:
   app: frontend-app
